# aegis-boot

./: .gitignore  .semgrepignore  .typos.toml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.locked  NOTICE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  cliff.toml  deny.toml  flake.nix  osv-scanner.toml  rust-toolchain.toml
.github/: dependabot.yml  identity-transition.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: brew-test.yml  catalog-refresh.yml  catalog-revalidate.yml  ci.yml  codeql.yml  crates-publish-dryrun.yml  crates-publish.yml  direct-install-e2e.yml  e2e-suite.yml  fuzz.yml  initramfs.yml  integration.yml  kexec-e2e.yml  linkcheck.yml  machete.yml  miri-kexec-loader.yml  miri.yml  mkusb.yml  ovmf-secboot.yml  qemu-smoke.yml  release.yml  reproducible-build.yml  scorecard.yml  sign-identity-transition.yml  tui-screenshots.yml  typos.yml  update-rotate-e2e.yml  windows-cargo-check.yml
Formula/: README.md  aegis-boot.rb
assets/brand/: BRAND.md  palette.css
assets/brand/ascii/: logo-compact.txt  logo-full.txt
completions/: README.md  _aegis-boot  aegis-boot.bash
crates/aegis-catalog/: Cargo.toml  README.md
crates/aegis-catalog-data/: Cargo.toml
crates/aegis-catalog-data/keyring/: README.md  almalinux.txt  alpine.txt  debian.txt  fedora.asc  fedora.txt  fingerprints.toml  gparted.txt  kali.txt  linuxmint.asc  linuxmint.txt  manjaro.txt  mx.asc  mx.txt  opensuse.txt  rocky.txt  system-rescue.txt  ubuntu.asc  ubuntu.txt
crates/aegis-catalog/keyring/: gparted.asc  system-rescue.asc  system76.txt
crates/aegis-catalog/src/: lib.rs
crates/aegis-cli/: Cargo.toml  build.rs
crates/aegis-cli/src/: attest.rs  bug_report.rs  bundle_cache.rs  bundle_fetch.rs  bundle_verify.rs  catalog.rs  catalog_resolvers.rs  cmd_path.rs  compat.rs  completions.rs  constants.rs  detect.rs  direct_install.rs  direct_install_manifest.rs  doctor.rs  eject.rs  fetch.rs  fetch_image.rs  flash.rs  init.rs  init_wizard.rs  inventory.rs  main.rs  man.rs  mounts.rs  paths.rs  plan.rs  quickstart.rs  readback.rs  redact.rs  tour.rs  update.rs  update_apply.rs  userfacing.rs  verify.rs
crates/aegis-cli/src/detect/: linux.rs  macos.rs  mod.rs  windows.rs
crates/aegis-cli/src/macos_direct_install/: mod.rs  partition.rs  pipeline.rs  preflight.rs
crates/aegis-cli/src/windows_direct_install/: drive_enumeration.rs  flash_dispatcher.rs  format.rs  mod.rs  partition.rs  pipeline.rs  preflight.rs  raw_write.rs  source_resolution.rs
crates/aegis-cli/tests/fixtures/windows/: get-disk-bustype.json
crates/aegis-core/: Cargo.toml  README.md
crates/aegis-core/src/: lib.rs
crates/aegis-fetch/: Cargo.toml
crates/aegis-fetch/src/: download.rs  keyring.rs  lib.rs  sha256.rs  sums.rs  verify.rs
crates/aegis-fitness/: Cargo.toml
crates/aegis-fitness/src/: main.rs
crates/aegis-manifest/: Cargo.toml  README.md
crates/aegis-manifest/src/: lib.rs
crates/aegis-trust/: Cargo.toml  README.md  build.rs
crates/aegis-trust/src/: anchor.rs  errors.rs  lib.rs  seen_epoch.rs
crates/aegis-wire-formats/: Cargo.toml  README.md
crates/aegis-wire-formats/src/: lib.rs
crates/iso-parser/: Cargo.toml  README.md  iso-parser.cdx.json
crates/iso-parser/fuzz/: .gitignore  Cargo.toml  README.md
crates/iso-parser/fuzz/corpus/distribution_from_paths/: arch  debian-casper  fedora-pxeboot
crates/iso-parser/fuzz/corpus/validate_path/: nested-dotdot  ok-relative  traversal-dotdot
crates/iso-parser/fuzz/fuzz_targets/: distribution_from_paths.rs  validate_path.rs
crates/iso-parser/src/: detection_tests.rs  lib.rs
crates/iso-probe/: Cargo.toml  README.md  iso-probe.cdx.json
crates/iso-probe/src/: lib.rs  minisign.rs  sidecar.rs  signature.rs
crates/iso-probe/tests/: mount_integration.rs
crates/kexec-loader/: Cargo.toml  README.md  kexec-loader.cdx.json
crates/kexec-loader/src/: lib.rs  syscall.rs
crates/kexec-loader/tests/: dry_run_integration.rs
crates/rescue-tui/: Cargo.toml  README.md  rescue-tui.cdx.json
crates/rescue-tui/src/: docgen.rs  failure_log.rs  keybindings.rs  lib.rs  main.rs  network.rs  persistence.rs  render.rs  state.rs  test_mode.rs  theme.rs  tpm.rs  verdict.rs
docs/: ARCHITECTURE.md  CLI.md  HARDWARE_COMPAT.md  HOW_IT_WORKS.md  INSTALL.md  LOCAL_TESTING.md  README.md  RELEASE_CRATES.md  RELEASE_NOTES_FOOTER.md  TOUR.md  TROUBLESHOOTING.md  UNSIGNED_KERNEL.md  USB_LAYOUT.md  content-audit.md  rescue-tui-serial-format.md
docs/adr/: 0001-runtime-architecture.md
docs/architecture/: KEY_MANAGEMENT.md  LAST_BOOTED_PERSISTENCE.md  WINDOWS_DIRECT_INSTALL.md
docs/compatibility/: iso-matrix.md
docs/demos/: README.md
docs/design/: aegis-hwsim-persona-schema.md  rescue-tui-ux-overhaul.md  windows-iso-boot.md
docs/governance/: CI_REQUIRED_CHECKS.md  ORG_MIGRATION_PLAN.md
docs/reference/: CLI_SYNOPSIS.md  README.md
docs/reference/schemas/: aegis-attestation.schema.json  aegis-boot-attest-list.schema.json  aegis-boot-bundle-manifest.schema.json  (+11 more)
docs/screenshots/: README.md  rescue-tui-preview.ansi
docs/validation/: REAL_HARDWARE_REPORT_132.md
keys/: canonical-epoch.json  historical-anchors.json  maintainer-epoch-1.pub
man/: aegis-boot.1  aegis-boot.1.in
scripts/: build-initramfs.sh  capture-tui-screenshots.sh  catalog-revalidate.sh  check-doc-version.sh  check-doc-version.test.sh  crates-io-preregister.sh  dev-test.sh  draft-release-notes.sh  install.sh  mkusb.sh  org-migration-sweep.sh  ovmf-secboot-e2e.sh  ovmf-secboot-smoke.sh  publish-if-new.sh  qemu-kexec-e2e.sh  qemu-loaded-stick.sh  qemu-smoke.sh  qemu-try.sh  qemu-usb-passthrough.sh  record-demos.sh  render-demos.sh
scripts/validation/: README.md  boot-ovmf.sh  kill-mid-save.sh  save_smoke.rs
tools/: install-hooks.sh  local-ci.sh
tools/distro-smoke/: MANIFEST.md  README.md  distros.sh  run.sh
winget-manifests/: README.md
winget-manifests/templates/: AegisBootProject.aegis-boot.installer.yaml  AegisBootProject.aegis-boot.locale.en-US.yaml  AegisBootProject.aegis-boot.yaml
