[workspace]
resolver = "2"
members = [
    "crates/iso-parser",
    "crates/iso-probe",
    "crates/rescue-tui",
    "crates/kexec-loader",
]
exclude = ["crates/iso-parser/fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/williamzujkowski/aegis-boot"

[workspace.dependencies]
thiserror = { version = "2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
libc = "0.2"

[workspace.lints.rust]
# `deny`, not `forbid`, so individual crates can narrowly opt into `unsafe`
# for syscall FFI (kexec-loader). Every such crate must justify it per
# module with `#[allow(unsafe_code)]` and document the invariant.
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
