[workspace]
resolver = "2"
members = [
    "crates/iso-parser",
    "crates/iso-probe",
    "crates/rescue-tui",
    "crates/kexec-loader",
    "crates/aegis-fitness",
    "crates/aegis-cli",
]
exclude = ["crates/iso-parser/fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/williamzujkowski/aegis-boot"

[workspace.dependencies]
thiserror = { version = "2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
libc = "0.2"

[workspace.lints.rust]
# `deny`, not `forbid`, so kexec-loader can narrowly opt into `unsafe`
# for syscall FFI via `#[allow(unsafe_code)]` with documented invariants.
# Library crates that don't need any unsafe (iso-probe, rescue-tui,
# aegis-fitness) override this in their own [lints.rust] to `forbid` —
# stricter, and `forbid` cannot be opted out of even with #[allow(...)].
# That per-crate duplication is intentional; cargo lints can't merge
# partial overrides with workspace inheritance.
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
