[workspace]
resolver = "2"
members = [
    "crates/iso-parser",
    "crates/iso-probe",
    "crates/rescue-tui",
    "crates/kexec-loader",
    "crates/aegis-fitness",
    "crates/aegis-cli",
    "crates/aegis-wire-formats",
]
exclude = ["crates/iso-parser/fuzz"]

[workspace.package]
# Single source of truth for the release version (Phase 1a of #286).
# Each member crate references this via `version.workspace = true`.
# Release-cut flow: bump this one line + amend CHANGELOG, tag.
# CI's doc-version drift-check (Phase 1c) greps an allowlist of
# user-facing doc files and fails if any version literal diverges.
version = "0.17.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aegis-boot/aegis-boot"

[workspace.dependencies]
thiserror = { version = "2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
libc = "0.2"

[workspace.lints.rust]
# `deny`, not `forbid`, so kexec-loader can narrowly opt into `unsafe`
# for syscall FFI via `#[allow(unsafe_code)]` with documented invariants.
# Library crates that don't need any unsafe (iso-probe, rescue-tui,
# aegis-fitness) override this in their own [lints.rust] to `forbid` —
# stricter, and `forbid` cannot be opted out of even with #[allow(...)].
# That per-crate duplication is intentional; cargo lints can't merge
# partial overrides with workspace inheritance.
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# unwrap_used/expect_used tightened to `deny` (#138). Production code
# must surface errors explicitly rather than panic; test modules opt
# back out with `#[allow(clippy::unwrap_used, clippy::expect_used)]`
# at the `#[cfg(test)] mod …` boundary, where unwrap/expect are
# legitimate for clarity. CI already runs with `-D warnings` so this
# tightening blocks new unwrap/expect in production at PR time.
unwrap_used = "deny"
expect_used = "deny"
