[package]
name = "aegis-catalog-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Aegis-boot catalog data — types, vendor PGP keyring, ISO entries, per-distro URL resolvers. Phase 1 of #701: data + keyring factored out so Phase 2 can extract this crate to a sibling git repo (`aegis-boot/aegis-catalog-data`) without touching consumer call sites. Most consumers should depend on `aegis-catalog` (the re-export shim) rather than this crate directly."
readme = "README.md"

include = ["src/**/*", "keyring/**/*", "README.md", "Cargo.toml"]

[lib]

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
