[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI for aegis-boot — flash, add, list, verify"

[[bin]]
name = "aegis-boot"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
iso-probe = { path = "../iso-probe" }
# Atomic random-name temp files for write_sidecar_via_sudo's
# stage-then-copy path. Use the runtime dep (not the dev-dep) so the
# staging path is not predictable — closes the TOCTOU window semgrep
# rust.lang.security.temp-dir flagged on the previous PID-based name.
tempfile = "3.14"
# sha2 + hex are already transitive deps via iso-probe; surfaced
# directly here for the post-write readback verifier (#244 PR1).
sha2 = "0.10"
hex = "0.4"
thiserror = { workspace = true }
# Per-stage progress UI during dd (#244 PR3). Captures dd's
# status=progress stderr lines via a background reader thread and
# renders a bytes/sec + ETA bar. macOS dd doesn't emit progress on
# stderr, so the bar is Linux-only; macOS falls back to the original
# silent .status() call.
indicatif = { version = "0.17", default-features = false }
# Signed attestation manifest for direct-install (#274 PR3, #277).
# Ed25519-based minisign in pure Rust — no sigtool shellout, no PATH
# dependency. Used to sign `::/aegis-boot-manifest.json` on flashed
# sticks; operator-supplied keys, key lifecycle lives in Phase 3.
minisign = { version = "0.9", default-features = false }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
