[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI for aegis-boot — flash, add, list, verify"

[[bin]]
name = "aegis-boot"
path = "src/main.rs"

# Doc-drift tool: renders shared constants from `src/constants.rs`
# into HTML-marker regions in the user-facing docs. Feature-gated so
# the normal release binary does not pull the walkdir dep.
# Phase 2 of #286.
[[bin]]
name = "constants-docgen"
path = "src/bin/constants_docgen.rs"
required-features = ["docgen"]

# CLI subcommand drift-check (Phase 3a of #289 / #286). Validates
# that every subcommand in main.rs's dispatch table has a section
# in docs/CLI.md and a `.TP` entry in man/aegis-boot.1.in.
[[bin]]
name = "cli-docgen"
path = "src/bin/cli_docgen.rs"
required-features = ["docgen"]

[features]
# Gates doc-generator bins so the normal release `aegis-boot`
# binary does not compile the generator code paths. Pure stdlib —
# no extra deps pulled in.
docgen = []

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
iso-probe = { path = "../iso-probe" }
# Atomic random-name temp files for write_sidecar_via_sudo's
# stage-then-copy path. Use the runtime dep (not the dev-dep) so the
# staging path is not predictable — closes the TOCTOU window semgrep
# rust.lang.security.temp-dir flagged on the previous PID-based name.
tempfile = "3.14"
# sha2 + hex are already transitive deps via iso-probe; surfaced
# directly here for the post-write readback verifier (#244 PR1).
sha2 = "0.10"
hex = "0.4"
thiserror = { workspace = true }
# Per-stage progress UI during dd (#244 PR3). Captures dd's
# status=progress stderr lines via a background reader thread and
# renders a bytes/sec + ETA bar. macOS dd doesn't emit progress on
# stderr, so the bar is Linux-only; macOS falls back to the original
# silent .status() call.
indicatif = { version = "0.17", default-features = false }
# Signed attestation manifest for direct-install (#274 PR3, #277).
# Ed25519-based minisign in pure Rust — no sigtool shellout, no PATH
# dependency. Used to sign `::/aegis-boot-manifest.json` on flashed
# sticks; operator-supplied keys, key lifecycle lives in Phase 3.
minisign = { version = "0.9", default-features = false }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
