[package]
# Package name: `aegis-bootctl` (crates.io). The name `aegis-cli` on
# crates.io is owned by an unrelated Aegis Authenticator project
# (v1.3.95 as of 2026-04-22). Directory stays `crates/aegis-cli/` to
# avoid rewriting git history; binary stays `aegis-boot` via the
# `[[bin]]` entry below (operator-facing name is unchanged).
name = "aegis-bootctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI for aegis-boot — flash, add, list, verify"

# Files included in the published tarball. Default cargo behavior
# packages everything under `crates/aegis-cli/`; we explicitly include
# the staged man template + CHANGELOG that scripts/publish-if-new.sh
# copies in pre-publish (build.rs reads them at package-build time
# via the `first_existing` fallback). Without this, `cargo publish`
# packages the crate and build.rs panics on missing `../../man/...`.
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "man/aegis-boot.1.in",
    "CHANGELOG.md",
]

[[bin]]
name = "aegis-boot"
path = "src/main.rs"

# Doc-drift tool: renders shared constants from `src/constants.rs`
# into HTML-marker regions in the user-facing docs. Feature-gated so
# the normal release binary does not pull the walkdir dep.
# Phase 2 of #286.
[[bin]]
name = "constants-docgen"
path = "src/bin/constants_docgen.rs"
required-features = ["docgen"]

# CLI subcommand drift-check (Phase 3a of #289 / #286). Validates
# that every subcommand in main.rs's dispatch table has a section
# in docs/CLI.md and a `.TP` entry in man/aegis-boot.1.in.
[[bin]]
name = "cli-docgen"
path = "src/bin/cli_docgen.rs"
required-features = ["docgen"]

[features]
# Gates doc-generator bins so the normal release `aegis-boot`
# binary does not compile the generator code paths. Pure stdlib —
# no extra deps pulled in.
docgen = []

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
iso-probe = { path = "../iso-probe", version = "0.17" }
# Signed attestation manifest types extracted for Phase 4a of #286.
# This crate is the Rust + JSON Schema source of truth for the
# on-disk aegis-boot-manifest.json wire format.
aegis-wire-formats = { path = "../aegis-wire-formats", version = "0.17" }
# Atomic random-name temp files for write_sidecar_via_sudo's
# stage-then-copy path. Use the runtime dep (not the dev-dep) so the
# staging path is not predictable — closes the TOCTOU window semgrep
# rust.lang.security.temp-dir flagged on the previous PID-based name.
tempfile = "3.14"
# sha2 + hex are already transitive deps via iso-probe; surfaced
# directly here for the post-write readback verifier (#244 PR1).
sha2 = "0.11"
hex = "0.4"
thiserror = { workspace = true }
# Per-stage progress UI during dd (#244 PR3). Captures dd's
# status=progress stderr lines via a background reader thread and
# renders a bytes/sec + ETA bar. macOS dd doesn't emit progress on
# stderr, so the bar is Linux-only; macOS falls back to the original
# silent .status() call.
indicatif = { version = "0.18", default-features = false }
# Signed attestation manifest for direct-install (#274 PR3, #277).
# Ed25519-based minisign in pure Rust — no sigtool shellout, no PATH
# dependency. Used to sign `::/aegis-boot-manifest.json` on flashed
# sticks; operator-supplied keys, key lifecycle lives in Phase 3.
minisign = { version = "0.9", default-features = false }

# Windows-only: direct-install raw-disk I/O (#419 Phase 3 / #449).
# Feature list is the minimum subset the raw_write module needs —
# CreateFileW + DeviceIoControl + WriteFile + CloseHandle. Deliberately
# unused by the pure-fn scaffold in this PR; the follow-up wiring PR
# turns on the unsafe syscall sites behind a narrow
# `#[allow(unsafe_code)]` and consumes these features. Keeping the
# dep here from the start means the Windows cross-compile CI job
# already validates the version pin + feature list — no surprise-
# feature-flip in the wiring PR.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
