[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utility helpers for the aegis-boot workspace + future ecosystem (#556 PoC)"
readme = "README.md"

[lib]

[dependencies]

[lints]
workspace = true
