[package]
name = "aegis-fitness"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Repo / build / artifact fitness audit for aegis-boot"

[[bin]]
name = "aegis-fitness"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Tightened from warn → deny (#138 quality gates). Production code
# contains zero bare .unwrap()/.expect() calls at the time of this change.
# Test modules get #[allow(clippy::unwrap_used, clippy::expect_used)].
unwrap_used = "deny"
expect_used = "deny"
