[package]
name = "iso-parser"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/williamzujkowski/aegis-boot"
description = "Boot-entry discovery from ISO installation media (Arch, Debian/Ubuntu, Fedora/RHEL, Alpine, NixOS, Mint)"
readme = "README.md"
documentation = "https://docs.rs/iso-parser"
homepage = "https://github.com/williamzujkowski/aegis-boot"
keywords = ["iso", "boot", "kexec", "rescue", "installer"]
categories = ["filesystem", "parser-implementations"]

[features]
default = ["std"]
std = []

[dependencies]
thiserror = { version = "2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
similar-asserts = "1.5"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1.0"

# NOTE: no [lints] section — this crate predates the workspace lint
# discipline and uses unwrap()/expect() liberally in tests. Tracked
# separately under #77 follow-up; do not add `workspace = true` here
# without first auditing the test-suite warnings (38 clippy errors at
# last attempt). Adding `[lints]` is a non-trivial cleanup, not a
# CODEOWNERS-style fix.