[package]
name = "iso-parser"
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/williamzujkowski/aegis-boot"
description = "Boot-entry discovery from ISO installation media (Arch, Debian/Ubuntu, Fedora/RHEL, Alpine, NixOS, Mint)"
readme = "README.md"
documentation = "https://docs.rs/iso-parser"
homepage = "https://github.com/williamzujkowski/aegis-boot"
keywords = ["iso", "boot", "kexec", "rescue", "installer"]
categories = ["filesystem", "parser-implementations"]

[features]
default = ["std"]
std = []

[dependencies]
thiserror = { version = "2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
similar-asserts = "1.5"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1.0"

[lints]
workspace = true