[package]
name = "iso-probe"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime ISO discovery on the live rescue environment (loopback + GPT/ISO9660)"

[lib]

[dependencies]
iso-parser = { path = "../iso-parser" }
thiserror.workspace = true
serde = { workspace = true }
tracing.workspace = true
pollster = "0.4"

[dev-dependencies]
tempfile = "3.14"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
