[package]
name = "iso-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime ISO discovery for rescue environments (loopback mount + GPT/ISO9660 + sha256/minisign sidecar verification)"
readme = "README.md"
documentation = "https://docs.rs/iso-probe"
homepage = "https://github.com/williamzujkowski/aegis-boot"
keywords = ["iso", "loopback", "rescue", "kexec", "verification"]
categories = ["filesystem", "embedded"]

[lib]

[dependencies]
iso-parser = { path = "../iso-parser", version = "0.14" }
thiserror.workspace = true
serde = { workspace = true }
tracing.workspace = true
pollster = "0.4"
sha2 = "0.10"
hex = "0.4"
minisign-verify = "0.2"
# Operator-curated metadata sidecar (#246). default-features = false
# drops the indexmap/serde_spanned tree we don't use; we only need
# `parse` (deserialize) and `display` (serialize back to TOML).
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

[dev-dependencies]
tempfile = "3.14"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Tightened from warn → deny (#138 quality gates). Production code
# contains zero bare .unwrap()/.expect() calls at the time of this change.
# Test modules get #[allow(clippy::unwrap_used, clippy::expect_used)].
unwrap_used = "deny"
expect_used = "deny"
