[package]
name = "kexec-loader"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin safe wrapper over kexec_file_load(2) for the aegis-boot rescue TUI"

[lib]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
# intentionally empty — crate is Linux-only at runtime. Non-Linux builds
# compile so the workspace stays portable, but every public fn returns
# `KexecError::Unsupported`.

[lints]
workspace = true
