[package]
name = "kexec-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe wrapper over kexec_file_load(2) (Linux) for boot handoff — supports the signature-verified variant only"
readme = "README.md"
documentation = "https://docs.rs/kexec-loader"
homepage = "https://github.com/williamzujkowski/aegis-boot"
keywords = ["kexec", "linux", "reboot", "ffi", "syscall"]
categories = ["os::linux-apis", "api-bindings"]

[lib]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
# intentionally empty — crate is Linux-only at runtime. Non-Linux builds
# compile so the workspace stays portable, but every public fn returns
# `KexecError::Unsupported`.

[lints]
workspace = true

# Phase 6 of #286. docs.rs builds for x86_64-unknown-linux-gnu
# (default); this crate is Linux-only at runtime but compiles on
# other targets as a no-op, so docs.rs does not need a target
# override. Kept minimal for the same reason as the other library
# trio entries.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
