[package]
name = "rescue-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ratatui application for the aegis-boot signed Linux rescue environment"

[[bin]]
name = "rescue-tui"
path = "src/main.rs"

[dependencies]
iso-probe = { path = "../iso-probe" }
kexec-loader = { path = "../kexec-loader" }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = "1.0"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.14"
iso-probe = { path = "../iso-probe" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Tightened from warn → deny (#138 quality gates). Production code
# contains zero bare .unwrap()/.expect() calls at the time of this change.
# Test modules get #[allow(clippy::unwrap_used, clippy::expect_used)].
unwrap_used = "deny"
expect_used = "deny"
