[package]
name = "rescue-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ratatui application for the aegis-boot signed Linux rescue environment"

[[bin]]
name = "rescue-tui"
path = "src/main.rs"

# Docgen devtool — regenerates the trust-tier + keybinding tables in
# user-facing docs from the in-code sources. `--check` runs in CI to
# enforce drift-freedom. Phase 7 of #455 / closes #462.
[[bin]]
name = "tiers-docgen"
path = "src/bin/tiers_docgen.rs"

# Dev aid: render rescue-tui fixtures to ANSI-escaped stdout for
# visual review without building + booting a real aegis-boot stick.
# Not installed, not part of the boot chain.
[[bin]]
name = "tui-screenshots"
path = "src/bin/tui_screenshots.rs"

[dependencies]
aegis-wire-formats = { path = "../aegis-wire-formats", version = "0.17" }
iso-probe = { path = "../iso-probe" }
kexec-loader = { path = "../kexec-loader" }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = "1.0"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
sha2 = "0.11"
hex = "0.4"
# Pre-wrap info-pane reason strings before handing to ratatui
# Paragraph. `Paragraph::wrap` + `.scroll` has a known issue with
# wrapped-line accounting (ratatui/ratatui#2342); using textwrap
# gives us a stable `Vec<Line>` that scroll math handles correctly.
textwrap = { version = "0.16", default-features = false, features = ["smawk"] }

[dev-dependencies]
tempfile = "3.14"
iso-probe = { path = "../iso-probe" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Tightened from warn → deny (#138 quality gates). Production code
# contains zero bare .unwrap()/.expect() calls at the time of this change.
# Test modules get #[allow(clippy::unwrap_used, clippy::expect_used)].
unwrap_used = "deny"
expect_used = "deny"
